<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".My.Account_Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/ic_tb_account_login_back"
            android:layout_width="wrap_content"
            android:textColor="#383838"
            android:text="@string/ic_search_back"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="账户登录"/>
        <TextView
            android:gravity="right"
            android:textSize="18dp"
            android:id="@+id/tb_account_login_help"
            android:layout_width="match_parent"
            android:text="帮助"
            android:layout_height="wrap_content" />
    </LinearLayout>//TB
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_account_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_phone_number"
            android:textSize="22dp"/>
        <EditText
            android:id="@+id/account_login_set_phone_number"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_account_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入手机号/邮箱/用户名"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//账户
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_account_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_password"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_account_login_password"
            android:id="@+id/account_login_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入密码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/ic_account_login_psd_hide"
            android:text="@string/ic_login_eye_hide"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>//密码
    <Button
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/account_login_go"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FEDB43"
        android:textSize="20dp"
        android:text="登录"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/find_psd"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="忘记密码"/>
        <TextView
            android:id="@+id/to_SMS_login"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="短信验证登录"/>
    </RelativeLayout>
</LinearLayout>
