<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lmj.a2hm2.My.SMS_Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/ic_tb_SMS_login_back"
            android:layout_width="wrap_content"
            android:textColor="#383838"
            android:text="@string/ic_search_back"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="短信验证登录"/>
        <TextView
            android:gravity="right"
            android:textSize="18dp"
            android:id="@+id/tb_SMS_login_help"
            android:layout_width="match_parent"
            android:text="帮助"
            android:layout_height="wrap_content" />
    </LinearLayout>//TB
    <RelativeLayout
        android:id="@+id/RL_SMS_login_phone_number"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_SMS_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_phone_number"
            android:textSize="22dp"/>
        <EditText
            android:id="@+id/SMS_login_set_phone_number"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_SMS_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入手机号"
            android:background="@null"
            android:textColorHint="#eeeeee" />
        <TextView
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:id="@+id/SMS_login_send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="发送验证码"/>
    </RelativeLayout>//手机号
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_SMS_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_verification_code"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_SMS_verification_code"
            android:id="@+id/SMS_login_set_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入短信中的验证码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//验证码
    <Button
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/SMS_login_go"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FEDB43"
        android:textSize="20dp"
        android:text="登录"/>//登录
    <TextView
        android:id="@+id/to_account_login"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="账号密码登录"
        android:textSize="15dp"/>
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SMS_login_register"
        android:text="免费注册"
        android:textColor="#ff0000"
        android:background="@drawable/shape_login_register"/>//注册
    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="第三方登录"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <LinearLayout
                android:id="@+id/SMS_login_WeChat"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:id="@+id/ic_SMS_login_WeChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_SMS_login_WeChat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信登录"/>
            </LinearLayout>//微信登录
            <LinearLayout
                android:id="@+id/SMS_login_QQ"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:id="@+id/ic_SMS_login_QQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_SMS_login_QQ"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="QQ登录"/>
            </LinearLayout>//QQ登录
            <LinearLayout
                android:id="@+id/SMS_login_Micro_blog"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:id="@+id/ic_SMS_login_Micro_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_SMS_login_Micro_blog"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微博登录"/>
            </LinearLayout>//微博登录
        </LinearLayout>//第三方登录
    </LinearLayout>
</LinearLayout>
