<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".My.Rapid_Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/ic_tb_rapid_register_back"
            android:layout_width="wrap_content"
            android:textColor="#383838"
            android:text="@string/ic_search_back"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="一键注册"/>
        <TextView
            android:gravity="right"
            android:textSize="18dp"
            android:id="@+id/tb_rapid_registration_help"
            android:layout_width="match_parent"
            android:text="帮助"
            android:layout_height="wrap_content" />
    </LinearLayout>//TB
    <RelativeLayout
        android:id="@+id/RL_SMS_login_phone_number"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_rapid_registration_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_phone_number"
            android:textSize="22dp"/>
        <EditText
            android:id="@+id/rapid_registration_set_phone_number"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_rapid_registration_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入手机号"
            android:background="@null"
            android:textColorHint="#eeeeee" />
        <TextView
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:id="@+id/rapid_registration_send_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="获取验证码"/>
    </RelativeLayout>//手机号
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_rapid_registration_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_verification_code"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_rapid_registration_verification_code"
            android:id="@+id/rapid_registration_set_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入短信中的验证码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//验证码
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_rapid_registration_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_password"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_rapid_registration_set_password"
            android:id="@+id/rapid_registration_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请设置登录密码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//设置密码
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_rapid_registration_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_confirm_password"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_rapid_registration_confirm_password"
            android:id="@+id/rapid_registration_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请再次输入密码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//再次输入密码
    <Button
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/rapid_registration_go"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FEDB43"
        android:textSize="20dp"
        android:text="一键注册"/>//一键注册
    <TextView
        android:id="@+id/rapid_registration_other_method_register"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="其他方式注册"
        android:textSize="16dp"/>
</LinearLayout>
