<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".My.Email_Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/ic_tb_email_registration_back"
            android:layout_width="wrap_content"
            android:textColor="#383838"
            android:text="@string/ic_search_back"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="邮箱注册"/>
        <TextView
            android:gravity="right"
            android:textSize="18dp"
            android:id="@+id/tb_email_registration_help"
            android:layout_width="match_parent"
            android:text="帮助"
            android:layout_height="wrap_content" />
    </LinearLayout>//TB
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_email_registration_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_email"
            android:textSize="22dp"/>
        <EditText
            android:id="@+id/email_registration_set_email"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_email_registration_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请输入正确邮箱"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//邮箱
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_email_registration_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_password"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_email_registration_set_password"
            android:id="@+id/email_registration_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请设置登录密码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//设置密码
    <RelativeLayout
        android:layout_marginTop="0.5dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/ic_email_registration_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_confirm_password"
            android:textSize="22dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_email_registration_confirm_password"
            android:id="@+id/email_registration_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:hint="请再次输入密码"
            android:background="@null"
            android:textColorHint="#eeeeee" />
    </RelativeLayout>//再次输入密码
    <Button
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/email_registration_go"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FEDB43"
        android:textSize="20dp"
        android:text="注册"/>//一键注册
    <TextView
        android:id="@+id/to_SMS_register"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="短信验证注册"
        android:textSize="16dp"/>
</LinearLayout>
